OLD/tests/expects/enum_failure/test_enum_struct_base_type.expect
error: Enum backing type must be a non-pointer primitive integer type (i8, i16, i32, i64, u8, u16, u32, u64)
  --> enum_failure/test_enum_struct_base_type.truk:6:1
  |
5 | 
6 | enum Invalid : Point {
  | ^
7 |     A = 0
  |

Compilation failed with 1 error(s)
