OLD/tests/expects/enum_failure/test_enum_struct_base_type.truk
struct Point {
    x: i32,
    y: i32
}

enum Invalid : Point {
    A = 0
}

fn main() : i32 {
    return 0;
}
